Fixed button alignment on login page. Fixed button submission on user.html

--- a/static/main.css
+++ b/static/main.css
@@ -183,7 +183,7 @@ top: 0;
 width: 100%;
 height: 100%;
 z-index: 9999;
-background: url('http://bradsknutson.com/wp-content/uploads/2013/04/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+background: url('https://apps.nea.gov/grantsearch/images/ajaxSpinner.gif') 50% 50% no-repeat rgb(249,249,249);
 }
 
 
